--- a/website/src/styling/index.css
+++ b/website/src/styling/index.css
@@ -36,3 +36,43 @@
   --ifm-footer-link-color: #cfcfcf;
   --ifm-footer-background-color: #1c1c1c;
 }
+
+.theme-code-block-add {
+  --border-left: 10px;
+
+  position: relative;
+  background-color: #08ff0020;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 calc(var(--ifm-pre-padding));
+}
+
+.theme-code-block-add::before {
+  position: absolute;
+  left: 4px;
+
+  content: '+';
+
+  color: #00da86ce;
+  font-weight: bold;
+}
+
+.theme-code-block-remove {
+  --border-left: 10px;
+
+  position: relative;
+  background-color: #ff000020;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 calc(var(--ifm-pre-padding));
+}
+
+.theme-code-block-remove::before {
+  position: absolute;
+  left: 4px;
+
+  content: '-';
+
+  color: #da001dce;
+  font-weight: bold;
+}
