--- a/website/src/styling/index.css
+++ b/website/src/styling/index.css
@@ -22,7 +22,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -51,7 +51,7 @@
   position: absolute;
   left: 4px;
 
-  content: '+';
+  content: "+";
 
   color: #00da86ce;
   font-weight: bold;
@@ -71,7 +71,7 @@
   position: absolute;
   left: 4px;
 
-  content: '-';
+  content: "-";
 
   color: #da001dce;
   font-weight: bold;
